[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prograde"
authors = [{name = "Matthew Brett", email = "matthew.brett@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License",
               "Programming Language :: Python :: 3",
               'Development Status :: 3 - Alpha',
               'Operating System :: Microsoft :: Windows',
               'Operating System :: POSIX',
               'Operating System :: Unix',
               'Operating System :: MacOS']
dynamic = ["version", "description"]
description-file="README.md"
dependencies = [
    'git+https://github.com/matthew-brett/mcpmark',
    'gradools'
]

[project.urls]
Home = "https://github.com/matthew-brett/project-grader"

[project.scripts]
prograde = "prograde.__main__:main"

[project.optional-dependencies]
test = [
    'pytest>=7.2',
]
